package G16.Fields;

public class Jail extends Field {
    public Jail(String name) {
        super(name);
    }

    }

