package G16.Fields;

public class Tax extends Field {
    protected int price;
    public Tax(String name, int price0) {
        super(name);
    }
}
