package G16.Fields.UnBuyableField;

public class GoToJailField {
}
